Fixed some formatting that was giving a side scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,23 +18,23 @@
 }
 
 h1 {
-  @apply text-5xl uppercase;
+  @apply text-4xl sm:text-5xl uppercase;
 }
 
 h2 {
-  @apply text-4xl;
+  @apply text-3xl sm:text-4xl;
 }
 
 h3 {
-  @apply text-3xl;
+  @apply text-2xl sm:text-3xl;
 }
 
 h4 {
-  @apply text-2xl;
+  @apply text-xl sm:text-2xl;
 }
 
 h5 {
-  @apply text-xl;
+  @apply text-lg sm:text-xl;
 }
 
 /*********************/
